Squashed commit of the following:
commit d63f7cf370c3c4f319b5fa6dd25cdf5572cdf708
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sun Dec 9 01:45:27 2018 -0500

    doc log files

commit 95b8b0279d9c990c5ccf8494e283aa66ca33c968
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sun Dec 9 01:41:10 2018 -0500

    log compiler version and options

commit 3d9d5238bc5fa3f0ab94a3f8fc756c8f61094fc1
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sun Dec 9 01:25:06 2018 -0500

    deblank, doc

commit 0ea0233cda526f074ec2991cc708cd4f4839ee7e
Merge: e56625d f48fa8b
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sun Dec 9 01:19:33 2018 -0500

    Merge branch 'script_fixes' of https://github.com/mattzett/GEMINI into script_fixes

commit e56625d2dd458fc67a169235e40ed5f54c97c621
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sun Dec 9 01:19:25 2018 -0500

    functionalize git

commit f48fa8b53db0b74d432ac32d9f6856bcab3b262e
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sat Dec 8 21:49:25 2018 -0500

    improve intel builds

commit d3c8b4d40e0cf468af2c30ca01e9eefedc7957a8
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sat Dec 8 20:36:03 2018 -0500

    doc

commit 608376698f7f5de3a224cbd56a86f573c349c03c
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Sat Dec 8 20:33:01 2018 -0500

    linking OK, functionlize tests

commit 386be4eae077491bc9cea53f75b5c51c09b0b599
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Fri Dec 7 16:11:57 2018 -0500

    f90test

commit 1971b72ce136009b07a16f20e9207149b90be3ff
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Fri Dec 7 16:05:36 2018 -0500

    self-compiled mumps compiles, links, runs simpletest under gemini/tests

commit 941660631ccbf97a4816675af2fc628995bf6040
Author: Michael H

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
 language: c
 group: travis_latest
+dist: xenial
 
 git:
   depth: 3
   quiet: true
-
-os:
-- linux
-#- osx
-#- windows
 
 env: FC=gfortran
 
@@ -17,25 +13,19 @@ addons:
 #    sources: ubuntu-toolchain-r-test
     packages: ['gfortran','liblapack-dev','libmumps-dev','libopenmpi-dev','octave','liboctave-dev']
 
-before_install:
-- if [[ $TRAVIS_OS_NAME == osx ]]; then
-  brew update > /dev/null;
-  brew install gcc || brew link --overwrite gcc;
-  brew install lapack openblas open-mpi scalapack > /dev/null;
-  export FC=gfortran;
-# MUMPS works as below, but takes 10 minutes to build on Travis-CI
-#      brew tap dpo/openblas;
-#      brew tap-pin dpo/openblas;
-#      brew options mumps;
-#      brew install mumps;
-  fi
-# takes 15 minutes to setup on Travis for Linux.    
-#  - if [[ $TRAVIS_OS_NAME == linux ]]; then
-#      export HOMEBREW_FORCE_VENDOR_RUBY=1;
-#      sh -c "$(curl -fsSL https://raw.githubusercontent.com/Linuxbrew/install/master/install.sh)";
-#      export PATH="/home/travis/.linuxbrew/bin:$PATH";
-#      brew install gcc opencoarrays;
-#    fi
+matrix:
+  include: 
+  - os: linux
+# works on osx, but takes 10 minutes to build on Travis-CI
+#  - os: osx
+#    - brew install gcc
+#    - brew install lapack openblas open-mpi scalapack
+#    - brew tap dpo/openblas
+#    - brew tap-pin dpo/openblas
+#    - brew options mumps
+#    - brew install mumps
+#  - os: windows
+
     
 install:
 - cd $TRAVIS_BUILD_DIR/tests/bin
