--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
+Testing/
+.mypy_cache/
+*.dat
 *.orig
 CMakeFiles/
 CMakeCache.txt
-test_*
+test_mpi
+test_diffusion1D
+test_interp1
+test_interp2
 
 gemini
 initialize/
@@ -20,4 +26,4 @@ objects/
 gemini_mumps
 magcalc
 *~
-msis
+msis_setup
