--- a/numerical/CMakeLists.txt
+++ b/numerical/CMakeLists.txt
@@ -1,8 +1,7 @@
-cmake_minimum_required (VERSION 3.12)  # 3.9: MPI::MPI_Fortran 3.12 for find_ROOT
+cmake_minimum_required (VERSION 3.13)  
+# 3.9: MPI::MPI_Fortran, 3.11: Lapack, 3.12 for find_ROOT, 3.13 add_link_options
 project(gem-num Fortran)
 enable_testing()
-
-cmake_policy(SET CMP0074 NEW)
 
 get_directory_property(hasParent PARENT_DIRECTORY)
 if(NOT hasParent)
