--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,7 +19,8 @@ find_package(MPI REQUIRED COMPONENTS Fortran)
 add_executable(testmpi test_mpi.f90)
 target_link_libraries(testmpi PRIVATE MPI::MPI_Fortran)
 add_test(NAME MPIexist COMMAND testmpi)
-
+  
+set_tests_properties(MPIexist PROPERTIES TIMEOUT 5)
 #---------------
 include(${PROJECT_SOURCE_DIR}/../cmake/mumps.cmake)
 
@@ -32,3 +33,5 @@ target_link_libraries(testmumps PRIVATE
 add_test(NAME MUMPS
   COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${CMAKE_CURRENT_BINARY_DIR}/testmumps
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+  
+set_tests_properties(MUMPS PROPERTIES TIMEOUT 5)
