fix Debug build parameters, Ford doc style

--- a/numerical/CMakeLists.txt
+++ b/numerical/CMakeLists.txt
@@ -23,7 +23,7 @@ target_link_libraries(interp PRIVATE const)
 
 
 if(CMAKE_BUILD_TYPE STREQUAL Debug)
-  include(test_interp.cmake)
+  include(interpolation/test_interp.cmake)
 endif()
 
 
