--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(MPI REQUIRED COMPONENTS Fortran)
 
 add_executable(testmpi test_mpi.f90)
 target_link_libraries(testmpi PRIVATE MPI::MPI_Fortran)
+target_compile_options(testmpi PRIVATE ${FFLAGS})
 add_test(NAME MPIexist COMMAND testmpi)
   
 set_tests_properties(MPIexist PROPERTIES TIMEOUT 5)
@@ -27,6 +28,7 @@ set_tests_properties(MPIexist PROPERTIES TIMEOUT 5)
 
 add_executable(testmumps test_mumps.f90)
 target_include_directories(testmumps PRIVATE ${MUMPS_INCLUDE_DIRS})
+target_compile_options(testmumps PRIVATE ${FFLAGS})
 target_link_libraries(testmumps PRIVATE
                      ${MUMPS_LIBRARIES}
                      MPI::MPI_Fortran)
