Glow initial merge (#1)
* GLOW module inclusion.

* Merging GLOW branch

* Submodule changed to NCAR/GLOW

* Removed qproton.f90 from cmake, possibly make optional later.

* Fixed idate conversion passed to GLOW module.

* revert

* add glow link

init glow connector

builds with glow off

noglow passing 2D/3D tests

add new glow 2d/3d tests

init build glow

fix plot generation options

doc

* only compare requested configs

workaround for cygwin 1 cpu core report from MPI

doc

--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,12 @@ __pycache__/
 
 Testing/
 .mypy_cache/
+
+*.exe
 *.dat
 *.orig
 CMakeFiles/
 CMakeCache.txt
-test_mpi
-test_diffusion1D
-test_interp1
-test_interp2
 
 gemini
 initialize/
