--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,7 +22,9 @@ target_link_libraries(testmpi PRIVATE MPI::MPI_Fortran)
 target_compile_options(testmpi PRIVATE ${FFLAGS})
 add_test(NAME MPIexist COMMAND testmpi)
   
-set_tests_properties(MPIexist PROPERTIES TIMEOUT 5)
+set_tests_properties(MPIexist PROPERTIES 
+  TIMEOUT 5
+  FIXTURES_SETUP MPIMUMPS)
 #---------------
 
 
@@ -36,4 +38,7 @@ add_test(NAME MUMPS
   COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${MPIEXEC_MAX_NUMPROCS} ${CMAKE_CURRENT_BINARY_DIR}/testmumps
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
   
-set_tests_properties(MUMPS PROPERTIES TIMEOUT 5)
+set_tests_properties(MUMPS PROPERTIES 
+  TIMEOUT 5
+  DEPENDS MPIexist
+  FIXTURES_SETUP MPIMUMPS)
