correct scalapack default to OpenMPI
updating for self-build case

cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.12)   
 # 3.9: MPI::MPI_Fortran  3.11 for FindLapack bug   3.12 for find_ROOT
-project(gemini3d Fortran C)  # MUST include C language for Intel / MKL to work
+project(gemini3d C Fortran)  # MUST include C language for Intel / MKL to work
 enable_testing()
 
 if(NOT realbits)
