Squashed commit of the following:
commit 1404898782380e7bf4c9a89b33b6c6d39aaf0e48
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Tue Jan 15 17:38:41 2019 -0500

    scoping

commit 9f86ebc0a2a36ca19cbfe6a512708a3e85d1a197
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Tue Jan 15 17:28:47 2019 -0500

    deblank, pure, private

commit a389d9493341dae45de51b5617d667d1e2debe47
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Tue Jan 15 16:20:28 2019 -0500

    init [skip ci]

commit 5bd2d745b6c8e1936bf1be8d13d30f5373663ca3
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Tue Jan 15 16:06:29 2019 -0500

    logic [skip ci]

commit 3fef90f1ef57167275ee8e6cdcb2ae7c6a8658b3
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Tue Jan 15 16:03:38 2019 -0500

    scripts CentOS7 / Bash 4.1 compat [skip ci]

commit cf873a3fa834c5ec3218200cba54e75031a1d8e3
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Tue Jan 15 15:51:54 2019 -0500

    centos, intel opts [skip ci]

commit d9dd27c76d5cde9e93855fa09dbd4737ba92ed76
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Tue Jan 15 15:40:27 2019 -0500

    deblank, pure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,7 +102,7 @@ target_include_directories(precipBCs PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/numeric
 target_compile_options(precipBCs PRIVATE ${FFLAGS})
 
 add_library(multifluid multifluid/multifluid.f90)
-target_link_libraries(multifluid PRIVATE precipBCs mpimod grid ionization sources advec diffusion)
+target_link_libraries(multifluid PRIVATE precipBCs mpimod grid ionization sources collision advec diffusion)
 target_include_directories(multifluid PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/numerical)
 target_compile_options(multifluid PRIVATE ${FFLAGS})
 
